test/tests/stages/8_loops/invalid_semantics/extra_credit/duplicate_case_in_labeled_switch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  identifier(label)
  :
  switch
  (
  identifier(a)
  )
  {
  case
  const int(1)
  :
  case
  const int(1)
  :
  break
  ;
  }
  return
  const int(0)
  ;
  }
